crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_while_break.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "i",
                    ),
                    ty: None,
                },
                Local {
                    name: None,
                    ty: None,
                },
                Local {
                    name: None,
                    ty: None,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: ConstInt(
                                0,
                            ),
                        },
                        Goto(
                            BlockId(
                                1,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        If {
                            cond: Bool(
                                true,
                            ),
                            then_bb: BlockId(
                                2,
                            ),
                            else_bb: BlockId(
                                3,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Binary {
                                op: Eq,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Int(
                                    5,
                                ),
                            },
                        },
                        If {
                            cond: Local(
                                LocalId(
                                    1,
                                ),
                            ),
                            then_bb: BlockId(
                                4,
                            ),
                            else_bb: BlockId(
                                5,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Goto(
                            BlockId(
                                3,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Binary {
                                op: Add,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Int(
                                    1,
                                ),
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    2,
                                ),
                            ),
                        },
                        Goto(
                            BlockId(
                                1,
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
