crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_while_continue.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 296
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
