crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_while_infinite.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [],
            blocks: [
                MirBlock {
                    insts: [
                        Goto(
                            BlockId(
                                1,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        If {
                            cond: Bool(
                                true,
                            ),
                            then_bb: BlockId(
                                2,
                            ),
                            else_bb: BlockId(
                                3,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Int(
                                    42,
                                ),
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            None,
                        ),
                    ],
                },
            ],
        },
    ],
}
