crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_while_nested.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 309
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
