crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_while_simple.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 270
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
